--- a/feedback/css/form-processing.css
+++ b/feedback/css/form-processing.css
@@ -3,16 +3,10 @@
 *::after {
   box-sizing: border-box;
 }
-::-webkit-scrollbar {
-  width: 0;
-}
-:root{
-  text-align: center;
-}
 
 * {
   box-sizing: border-box;
-  font-family: "Poiret One", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   margin: 0;
 }
 .d-none {
@@ -24,110 +18,6 @@ html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
-body {
-  background-image: url(/fon/fonProm.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.audit{
-  margin-top: 4%;
-}
-
-header {
-  border-top: 4px solid #F7F6F1;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  position: fixed;
-  z-index: 100;
-  top: 0;
-  background-color: #282828;
-  transition: 0.1s;
-}
-header .header_left {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
-header .header-figur {
-  border-bottom: 70px solid #F7F6F1;
-  border-left: 50px solid transparent;
-  border-right: 50px solid transparent;
-  height: 0;
-  width: 25vw;
-  transition: 0.1s;
-  margin-left: 5%;
-}
-header .header-figur.colorFigure {
-  transition: 0.1s;
-  border-bottom: 70px solid rgba(40, 40, 40, 0.1);
-  border-left: 50px solid transparent;
-  border-right: 50px solid transparent;
-  height: 0;
-  width: 25vw;
-}
-header.color {
-  background-color: rgba(40, 40, 40, 0.5);
-  transition: 1s;
-}
-header .navig h2{
-  font-size: 35px;
-  color: white;
-  font-weight: 200;
-  margin-left: -5%;
-}
-
-.logo {
-  margin-top: 5px;
-  margin-left: 20px;
-  width: 60px;
-}
-
-.header-fon {
-  background-image: url(/fon/Vector\ 48.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: 100vw;
-  margin-top: -10%;
-  height: 60vh;
-}
-
-
-
-.block-forma{
-  position: relative;
-}
-footer{
-  border-bottom: 4px solid white;
-  height: 25vh;
-  width: 100%;
-  background: #282828;
-  background: linear-gradient(2.7deg, #282828 68%, rgba(0, 164, 255, 0) 80%);
-}
-.block-footer{
-  background-image: url(/fon/fon-footer.png);
-  background-size: cover;
-  height: 25vh;
-  width: 100%;
-}
-.block-forma__elemt{
-  left: 0;
-  right: 0;
-  padding: 1%;
-  position: absolute;
-  display: flex;
-  flex-direction: row-reverse;
-  align-items: flex-end;
-  justify-content: space-between;
 }
 
 
@@ -206,19 +96,47 @@ textarea {
   resize: vertical;
 }
 .form__wrapper{
-  border-radius: 30px;
-  background-color: rgb(181,184,177, 0.8);
-  width: 700px;
-  padding: 7%;
+  background-color: white;
+  width: 500px;
+  padding: 1%;
+  margin-top:5%;
+  margin-bottom: 5%;
+  z-index: 100;
 }
 
+.container{
+  z-index: 150;
+  position: fixed;
+  padding-top: 100px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(179, 179, 179, 0.8);
+  animation: contAnim .5s ease-in;
+}
+@keyframes contAnim {
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+}
+.container p{
+  text-align: center;
+  color: black;
+  font-size: 16px;
+}
 
-
-h1 {
+.container h1 {
   font-size: calc(30px + 5 * (100vw / 1280));
   font-weight: 200;
-  color: white;
-  margin-top: -5%;
+  color: black;
+  margin-top: 5%;
   margin-bottom: 5%;
   text-align: center;
 }
@@ -226,12 +144,6 @@ h1 {
 
 
 .form-row {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  margin-right: -5px;
-  margin-left: -5px;
   width: 100%;
 }
 
@@ -269,7 +181,7 @@ h1 {
   border-color: #80bdff;
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
-  text-align: center;
+  text-align: left;
 }
 
 label {
@@ -291,97 +203,7 @@ input[type=radio] {
   box-sizing: border-box;
   padding: 0;
 }
-.style_input{
-  background-color: rgba(213, 214, 211, 1);
-  height: 50px;
-  border-radius: 20px;
-  padding: 1%;
-  font-size: 30px;
-  text-align: center;
-}
-.style_input::placeholder{
-  font-size: calc(20px + 5 * (100vw / 3080));
-  text-align: center;
-}
 
-.style_input-btn{
-  background-color: rgba(213, 214, 211, 1);
-  height: 43px;
-  border-radius: 20px;
-  text-align: center;
-  width: 97%;
-  margin-left: 1.5%;
-  margin-top: 2%;
-  font-size: calc(17px + 5 * (100vw / 3080));
-}
-.style_btn-text::placeholder{
-  font-size: calc(17px + 5 * (100vw / 3080));
-  text-align: center;
-}
-.btn{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-around;
-}
-.brand{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-around;
-}
-.style_btn{
-  cursor: pointer;
-  text-align: center;
-  margin-top: 5%;
-    background-color: rgba(213, 214, 211, 1);
-    border: none;
-    width: 180px;
-    font-size: 20px;
-    border-radius: 20px;
-    padding: 0px;
-}
-.style_btn:hover{
-  box-shadow: 2px 2px 10px #FFB400;
-}
-.style_btn:focus{
-  background-color: rgba(213, 214, 211, 1);
-  border: none;
-}
-.style_btn.active{
-  box-shadow: 2px 2px 10px #FFB400;
-}
-
-.style_brand1, .style_brand2{
-  cursor: pointer;
-  text-align: center;
-  margin-top: 5%;
-    background-color: rgba(213, 214, 211, 1);
-    border: none;
-    width: 180px;
-    font-size: 20px;
-    border-radius: 20px;
-    padding: 0px;
-}
-.style_brand1:hover{
-  box-shadow: 2px 2px 10px #FFB400;
-}
-.style_brand1:focus{
-  background-color: rgba(213, 214, 211, 1);
-  border: none;
-}
-.style_brand2:hover{
-  box-shadow: 2px 2px 10px #FFB400;
-}
-.style_brand2:focus{
-  background-color: rgba(213, 214, 211, 1);
-  border: none;
-}
-.style_brand1.active, .style_brand2.active{
-  box-shadow: 2px 2px 10px #FFB400;
-}
 textarea.form-control {
   overflow: auto;
   resize: vertical;
@@ -393,13 +215,7 @@ textarea.form-control {
   font-size: 30px;
 }
 
-.style_btn-text::placeholder{
-  font-size: calc(17px + 5 * (100vw / 3080));
-  text-align: center;
-}
-
 textarea::placeholder{
-  text-align: center;
   font-size: calc(20px + 5 * (100vw / 3080));
 }
 /* Стили для секции, с помощью которой можно добавить к форме файлы */
@@ -570,11 +386,11 @@ textarea::placeholder{
 
 /* CSS для секции "Пользовтельское соглашение" */
 .form-check {
+  margin-top: 5%;
   display: flex;
+  flex-direction: row;
   align-items: center;
-  
-  padding-left: 4%;
-  
+  justify-content: center;
 }
 
 .form-check-input.is-invalid,
@@ -587,7 +403,7 @@ textarea::placeholder{
   width: 2em;
   height: 2em;
   vertical-align: top;
-  background-color: #fff;
+  background-color: black;
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -621,10 +437,11 @@ textarea::placeholder{
 
 .form-check-label {
   margin-bottom: 0;
-  color: white;
+  color: black;
+  font-size: 15px;
 }
 .form-check-label a{
-  color: #FFB400;
+  color: #710B0B;
 }
 .is-invalid~.invalid-feedback,
 .is-invalid~.invalid-tooltip,
@@ -787,31 +604,29 @@ textarea.form-control.is-invalid {
 .form-submit {
  text-align: center;
  margin-top: 7%;
- margin-right: 5%;
 }
 
 /* CSS для кнопки submit */
 button[type="submit"] {
   display: inline-flex;
-  margin-top: 12%;
   align-items: center;
   justify-content: center;
   font-weight: 300;
-  color: black;
+  color: white;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  background-color: #FFB400;
+  background-color: #00296b;
   border: none;
+  width: 100%;
   padding: .375rem .75rem;
   line-height: 1.5;
-  border-radius: 20px;
+  border-radius: 10px;
   box-shadow: 1px 1px 5px black;
   transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
   position: relative;
-  width: 300px;
-  font-size: calc(25px + 5 * (100vw / 3080));
+  font-size: calc(20px + 5 * (100vw / 3080));
 }
 
 button[type="submit"]:disabled {
@@ -896,8 +711,6 @@ button[type="submit"]:not(:disabled):focus {
   text-align: center;
   padding: 1rem;
   background-color: rgb(181,184,177, 0.7);
-  height: 60%;
-  width: 60%;
   color: #fff;
   border-radius: 20px;
 }
@@ -912,7 +725,8 @@ button[type="submit"]:not(:disabled):focus {
 .form-success__btn {
   font-weight: 400;
   border: none;
-  background-color: #FFB400;
+  background-color: #710B0B;
+  color: white;
   border-radius: 10px;
   box-shadow: 1px 1px 10px black;
   width: 150px;
