--- a/style/style.scss
+++ b/style/style.scss
@@ -1,121 +1,135 @@
 
 
 *{
-    box-sizing: border-box;
-    font-family: 'Arial', sans-serif;
-    margin: 0;
+  box-sizing: border-box;
+  font-family: 'Arial', sans-serif;
+  margin: 0;
 }
-
 $blue: #00296b;
-$bluewhite: #00509d;
-$yellow: #fdc500;
+$bluewhite: #252525;
+$yellow: #FF6E28;
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 
 
 .menuBtn.active span:nth-of-type(1) {
-    display: none;
-  }
-  
-  .menuBtn.active span:nth-of-type(2) {
-    top: 50%;
-    transform: translate(-50%, 0%) rotate(45deg);
-  }
-  
-  .menuBtn.active span:nth-of-type(3) {
-    top: 50%;
-    transform: translate(-50%, 0%) rotate(-45deg);
-  }
-  
-  .menuBtn {
-    margin-left: 85%;
-    cursor: pointer;
-    width: 100px;
-    height: 30px;
-    position: fixed;
-    z-index: 3;
-    overflow: hidden;
-    display: none;
-  }
-  
-  .menuBtn span {
-    width: 34px;
-    height: 3px;
-    position: absolute;
-    top: 50%;
-    left: 75%;
-    transform: translate(-50%, -50%);
-    background-color: yellow;
-    transition: all 0.5s;
-  }
-  
-  .menuBtn span:nth-of-type(2) {
+  display: none;
+}
 
-    top: calc(20% - 5px);
-  }
-  
-  .menuBtn span:nth-of-type(3) {
+.menuBtn.active span:nth-of-type(2) {
+  top: 50%;
+  transform: translate(-50%, 0%) rotate(45deg);
+}
 
-    top: calc(80% + 5px);
-  }
+.menuBtn.active span:nth-of-type(3) {
+  top: 50%;
+  transform: translate(-50%, 0%) rotate(-45deg);
+}
+
+.menuBtn {
+  margin-left: 85%;
+  cursor: pointer;
+  width: 100px;
+  height: 30px;
+  position: fixed;
+  z-index: 3;
+  overflow: hidden;
+  display: none;
+}
+
+.menuBtn span {
+  width: 34px;
+  height: 3px;
+  position: absolute;
+  top: 50%;
+  left: 75%;
+  transform: translate(-50%, -50%);
+  background-color: yellow;
+  transition: all 0.5s;
+}
+
+.menuBtn span:nth-of-type(2) {
+
+  top: calc(20% - 5px);
+}
+
+.menuBtn span:nth-of-type(3) {
+
+  top: calc(80% + 5px);
+}
 
 header{
-  img{
-    object-fit: cover;
-  }
-  .header-up{
-    margin-top: 1%;
+img{
+  object-fit: cover;
+}
+.header-up{
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: 100;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  background-color: #00296b;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  button{
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    button{
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      cursor: pointer;
-      background-color: $yellow;
-      border: none;
-      border-radius: 10px;
-      padding: 10px;
-      width: 250px;
-      margin-right: 1%;
-      color: $blue;
-      font-size: 20px;
-      transition: .5s;
-      &:hover{
-        background-color: #219ebc;
-      }
-    }
-  }
-  ul{
-    display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    list-style-type: none;
-    a{
-      text-decoration: none;
-      font-weight: 700;
-      color: $bluewhite;
-      font-size: 20px;
-      padding: 20px;
-      transition: .5s;
-      &:hover{
-        color: $yellow;
-      }
+    cursor: pointer;
+    background-color: $yellow;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    width: 250px;
+    margin-right: 1%;
+    color: white;
+    font-size: 20px;
+    transition: .5s;
+    &:hover{
+      background-color: $bluewhite;
     }
   }
 }
-hr{
-  margin-top: 1%;
-  border:1px solid  rgb(179, 179, 179, 0.2);
+ul{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  list-style-type: none;
+  a{
+    text-decoration: none;
+    font-weight: 200;
+    color: white;
+    font-size: 20px;
+    padding: 20px;
+    transition: .5s;
+    &:hover{
+      color: $yellow;
+    }
+    &.active{
+      color: $yellow;
+    }
+  }
 }
-.chemistry{
+}
+hr{
+margin-top: 7%;
+border:1px solid  rgb(179, 179, 179, 0.2);
+}
+body{
+  background-color: #252525;
+}
+/*.chemistry{
   padding-top: 2%;
+  padding-bottom: 2%;
+  background-color: white;
   h2{
     text-align: center;
     color: #00296b;
@@ -143,9 +157,8 @@ hr{
     }
   }
 }
-
+*/
 .company{
-  margin-top: 4%;
   background-image: url(/img/fon-kolba.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -207,9 +220,10 @@ hr{
     h2{
       font-size: 45px;
       font-weight: 200;
-      color: $blue;
+      color: white;
     }
     p{
+      color: white;
       padding-top: 1%;
       font-size: 20px;
     }
@@ -223,8 +237,8 @@ hr{
     button{
       border: none;
       margin: 20px;
-      width: 550px;
-      padding: 40px;
+      width: 540px;
+      height: 129px;
       cursor: pointer;
       font-size: 50px;
       border-radius: 10px;
@@ -239,28 +253,62 @@ hr{
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
-      color: white;
+      padding: 0;
+      p{
+        padding: 30px;
+        border-radius: 10px;
+        color: white;
+        font-size: 30px;
+        background-color: rgba(105, 105, 105, 0.5);
+        height: 129px;
+        padding-top: 50px;
+      }
     }
     .sir{
       background-image: url(/img/sir.png);
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
-      color: white;
+      padding: 0;
+      p{
+        padding: 30px;
+        padding-top: 50px;
+        border-radius: 10px;
+        color: white;
+        font-size: 30px;
+        background-color: rgba(105, 105, 105, 0.5);
+        height: 129px;
+      }
     }
     .soda{
       background-image: url(/img/soda.png);
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
-      color: white;
+      padding: 0;
+      p{
+        padding: 30px;
+        padding-top: 50px;
+        border-radius: 10px;
+        color: white;
+        font-size: 30px;
+        background-color: rgba(105, 105, 105, 0.5);
+        height: 129px;
+      }
     }
     .reagent{
       background-image: url(/img/reagent.png);
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
-      color: white;
+      padding: 0;
+      p{
+        padding: 30px;
+        border-radius: 10px;
+        color: white;
+        font-size: 30px;
+        background-color: rgba(105, 105, 105, 0.5);
+      }
     }
   }
 }
@@ -273,6 +321,84 @@ hr{
     margin-left: 3%;
     font-size: 45px;
       font-weight: 200;
-      color: $blue;
+      color: white;
+  }
+  .advan-position{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-around;
+  }
+  .advan-block{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 350px;
+    margin-top: 5%;
+    text-align: center;
+    p{
+      padding-top: 5%;
+      font-size: 25px;
+      color: white;
+    }
+  }
+}
+
+footer{
+  background-color: $blue;
+    .footer-bottom{
+      padding: 20px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      h2{
+        color: white;
+        font-size: 35px;
+      }
+      .bottom-text{
+        h2{
+          color: white;
+          font-weight: 200;
+          font-size: 20px;
+          margin-top: 3%;
+        }
+      }
+      .bottom-text__link{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 4%;
+        p{
+          color: white;
+          font-size: 20px;
+        }
+        a{
+          text-decoration: none;
+          color: $yellow;
+        }
+      }
+    }
+    hr{
+      margin-top: 0%;
+    }
+  }
+.prava{
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  h2{
+    color: white;
+    font-size: 17px;
+    font-weight: 200;
+  }
+  a{
+    text-decoration: none;
+    color: $yellow;
   }
 }
