--- a/delivery/style/style.scss
+++ b/delivery/style/style.scss
@@ -35,7 +35,7 @@ html {
   width: 100px;
   height: 30px;
   position: fixed;
-  z-index: 3;
+  z-index: 200;
   overflow: hidden;
   display: none;
 }
@@ -47,7 +47,7 @@ html {
   top: 50%;
   left: 75%;
   transform: translate(-50%, -50%);
-  background-color: yellow;
+  background-color: white;
   transition: all 0.5s;
 }
 
@@ -190,11 +190,11 @@ body{
 
 footer{
   background-color: $blue;
-  margin-top: 3%;
     .footer-bottom{
       padding: 20px;
       display: flex;
       flex-direction: row;
+      flex-wrap: wrap;
       align-items: center;
       justify-content: space-between;
       h2{
@@ -212,6 +212,7 @@ footer{
       .bottom-text__link{
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
         align-items: center;
         justify-content: space-between;
         margin-top: 4%;
@@ -233,6 +234,7 @@ footer{
   padding: 20px;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   h2{
