--- a/catalogy/style/style.scss
+++ b/catalogy/style/style.scss
@@ -35,7 +35,7 @@ html {
     width: 100px;
     height: 30px;
     position: fixed;
-    z-index: 3;
+    z-index: 200;
     overflow: hidden;
     display: none;
   }
@@ -47,7 +47,7 @@ html {
     top: 50%;
     left: 75%;
     transform: translate(-50%, -50%);
-    background-color: yellow;
+    background-color: white;
     transition: all 0.5s;
   }
   
@@ -370,6 +370,7 @@ footer{
       padding: 20px;
       display: flex;
       flex-direction: row;
+      flex-wrap: wrap;
       align-items: center;
       justify-content: space-between;
       h2{
@@ -387,6 +388,7 @@ footer{
       .bottom-text__link{
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
         align-items: center;
         justify-content: space-between;
         margin-top: 4%;
@@ -408,6 +410,7 @@ footer{
   padding: 20px;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   h2{
