--- a/delivery/style/style.css
+++ b/delivery/style/style.css
@@ -28,7 +28,7 @@ html {
   width: 100px;
   height: 30px;
   position: fixed;
-  z-index: 3;
+  z-index: 200;
   overflow: hidden;
   display: none;
 }
@@ -40,7 +40,7 @@ html {
   top: 50%;
   left: 75%;
   transform: translate(-50%, -50%);
-  background-color: yellow;
+  background-color: white;
   transition: all 0.5s;
 }
 
@@ -181,12 +181,12 @@ body {
 
 footer {
   background-color: #00296b;
-  margin-top: 3%;
 }
 footer .footer-bottom {
   padding: 20px;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
 }
@@ -203,6 +203,7 @@ footer .footer-bottom .bottom-text h2 {
 footer .footer-bottom .bottom-text__link {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   margin-top: 4%;
@@ -223,6 +224,7 @@ footer hr {
   padding: 20px;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
 }
